<resources>
    <string name="app_name">Praeclarum</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_prompt">Existing User? Log in</string>
    <string name="sign_up_prompt">No account yet? Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="password_again_prompt">Password Again</string>
    <string name="profile">Profile</string>

    <string name="title_activity_profile_picture">Profile Picture</string>

    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
</resources>